# sourceright

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .vale.ini  AGENTS.md  AGENTS.md.backup  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  book.toml  deny.toml  glama.json  lychee.toml  package.json  renovate.json  server.json  taplo.toml  typos.toml
.codev/: config.json
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  release-drafter.yml
arxiv/: 00README  README.md  references.bib  sourceright.tex
conductor/: citeweft-extraction-manifest.json  deprecation-policy.md  design.md  evidence-ledger.json  implementation-order.md  improvement-backlog.md  index.md  learning-entry.schema.json  learning-log.md  open-publishing-platform-issues.md  open-publishing-platform-matrix-2026-07-12.md  open-publishing-platform-registry.json  platform-registry.json  platform-registry.schema.json  plugin-compatibility-matrix.md  product-guidelines.md  product.md  release-channels.md  requirements.md  secrets-and-live-tests.md  submission-contracts.md  submission-inventory.json  submission-requirements.json  tech-stack.md  track-template.md  tracks.md  workflow.md
docs/: import-manifest.md  registry-readiness.md
docs-site/: astro.config.mjs  package-lock.json  package.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: validate_csl.rs  validate_sidecar.rs
github_pages_demo/: README.md  app.js  browser-smoke.mjs  demo-checklist.md  index.html  render-smoke.mjs  styles.css
interop-runners/: README.md  bibtex-parser-runner.mjs  citation-js-runner.mjs  package-lock.json  package.json
mcp/: llms-install.md  prompts.v1.json  resources.v1.json  tools.v1.json
plugins/: registry.toml
provider-fixtures/: README.md
schemas/: sourceright.arxiv-submission-fixture.schema.json  sourceright.citation-sync.schema.json  sourceright.export-manifest.schema.json  sourceright.interoperability-fixture.schema.json  sourceright.interoperability-report.schema.json  sourceright.journal-screening.schema.json  sourceright.legal-citation-report.schema.json  sourceright.live-submission-evidence.schema.json  sourceright.mcp-status.schema.json  sourceright.open-publishing-platform-registry.schema.json  sourceright.plugin-manifest.schema.json  sourceright.policy-report.schema.json  sourceright.policy.schema.json  sourceright.provenance-report.schema.json  sourceright.reference-report.schema.json  sourceright.review-queue.schema.json  sourceright.submission-packets.schema.json  sourceright.submission-requirements.schema.json  sourceright.sync-manifest.schema.json  sourceright.verification.schema.json
scripts/: build-host-packages.ps1  build-ojs-plugin-package.ps1  build-smithery-mcpb.ps1  build-vscode-vsix.ps1  check-release-parity.ps1  check-submission-readiness.ps1  check-workflow-harness.ps1  complete-host-submission-tracks.ps1  coverage-report.ps1  coverage-status.ps1  create-mcpb-zip.mjs  docs-parity.ps1  generate-mcp-server-card.ps1  ojs-docker-install-smoke.ps1  ojs-plugin-lint.ps1  propose-platform-track-candidates.ps1  publish-host-submissions.ps1  record_learning_candidate.py  release-check.ps1  release-status.ps1  run-interoperability-conformance.ps1  run-interoperability-matrix.ps1  run-local-rust-gates.ps1  run-local-rust-gates.sh  scaffold-host-submission-tracks.py  smoke-vscode-vsix.ps1  verify-arxiv-package.ps1  verify-citeweft-compatibility.ps1  verify-citeweft-extraction.ps1  verify-live-submission-evidence.ps1  verify-local-windows-gnu.ps1  verify-release-surface-refresh.ps1  verify-submission-readiness.ps1  verify.ps1
smithery/: smithery.yaml
sourceright-bench/: README.md  tasks-stress.yaml  tasks.yaml
src/: bench.rs  citation_sync.rs  citeweft.rs  citeweft_adapter.rs  cleaning.rs  conflict.rs  csl.rs  entity_model.rs  export.rs  extraction_benchmark.rs  grobid.rs  intake.rs  interoperability.rs  journal.rs  layout.rs  legal.rs  lib.rs  live_providers.rs  main.rs  mcp.rs  plugins.rs  policy.rs  provenance.rs  providers.rs  reconcile.rs  reference_model.rs  report.rs  review.rs  routing.rs  sidecar.rs  workspace.rs
streamlit_app/: DEPLOY.md  README.md  __init__.py  app.py  demo-checklist.md  demo_model.py  server_smoke.py  test_demo_model.py
tests/: ai_client_extension_publication_hardening_policy.rs  ai_client_mcp_packaging_policy.rs  arxiv_package_policy.rs  (+58 more)
(+1199 files in other folders)
