[package]
name = "sourceright"
version = "0.1.20"
edition = "2024"
rust-version = "1.94"
description = "Reference verification infrastructure for academic and legal citation workflows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/edithatogo/sourceright"
homepage = "https://edithatogo.github.io/sourceright/"
documentation = "https://edithatogo.github.io/sourceright/"
readme = "README.md"
keywords = ["citations", "references", "csl", "mcp", "verification"]
categories = ["command-line-utilities", "text-processing"]
include = [
    "/src/**",
    "/mcp/**",
    "/.well-known/**",
    "/plugins/**",
    "/schemas/**",
    "/examples/**",
    "/fixtures/**",
    "/interop-runners/**",
    "/provider-fixtures/**",
    "/sourceright-bench/**",
    "/docs/src/**",
    "/smithery/**",
    "/smithery/smithery.yaml",
    "/conductor/submission-requirements.json",
    "/conductor/submission-packets/**",
    "/conductor/release-channels.md",
    "/conductor/evidence-ledger.json",
    "/conductor/tracks/69-marketplace-submission-evidence/marketplace-evidence.md",
    "/scripts/build-smithery-mcpb.ps1",
    "/scripts/generate-mcp-server-card.ps1",
    "/scripts/verify-local-windows-gnu.ps1",
    "/scripts/verify-release-surface-refresh.ps1",
    "/scripts/verify-submission-readiness.ps1",
    "/scripts/release-status.ps1",
    "/scripts/run-interoperability-conformance.ps1",
    "/book.toml",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/CITATION.cff",
    "/SECURITY.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
citeweft = { version = "0.1.0", git = "https://github.com/edithatogo/citeweft.git", rev = "8c8932976250f9ca91c2bbda28ed68eeb191fa42" }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "multipart", "native-tls"] }
toml = "0.8.19"
thiserror = "2.0.17"
roxmltree = "0.20.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"
